--- a/index.html
+++ b/index.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
 
-<h1>Responsive Layout</h1>
+    <h1>Menu</h1>
 
-<div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
+    <div class="row">
+        <div class="col-lg-4 col-md-6">
+            <section>
+                <div class="title1">Rice</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dicta eos, ratione voluptas
+                    sint debitis ducimus, quisquam vitae doloremque minus est, esse temporibus nihil sunt fugiat. Iure
+                    delectus autem odio!</p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6">
+            <section>
+                <div class="title2">Beans</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dicta eos, ratione voluptas
+                    sint debitis ducimus, quisquam vitae doloremque minus est, esse temporibus nihil sunt fugiat. Iure
+                    delectus autem odio!</p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <section>
+                <div class="title3">Stew</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dicta eos, ratione voluptas
+                    sint debitis ducimus, quisquam vitae doloremque minus est, esse temporibus nihil sunt fugiat. Iure
+                    delectus autem odio!</p>
+            </section>
+        </div>
 
-</div>
+    </div>
 
 </body>
+
 </html>
