--- a/index.html
+++ b/index.html
@@ -1,102 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="css/style.css">
-    <title>module 3</title>
-
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script>
+    var names = []; // DO NOT REMOVE
+  </script>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
-
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-secondary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><h3>Food, LLC</h3></a>
-            <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse text-center" id="navbarNav">
-                <ul class=" navbar-nav d-md-none">
-                    <li class="nav-item border-bottom">
-                        <a class="nav-link" href="#">Chicken</a>
-                    </li>
-                    <li class="nav-item border-bottom">
-                        <a class="nav-link" href="#">Beef</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sushi</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid content">
-        <div class="row">
-            <div class="col">
-                <h1 class="text-center">Our Menu</h1>
-            </div>
-        </div>
-        <div class="container-fluid text-center py-4">
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6 col-xs-12  ">
-                    <div class="p-1 bg-secondary-subtle">
-                        <h4 class="text-center ">Chicken</h4>
-                    <p class="text-start px-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.</p>
-                    </div>
-
-                </div>
-                <div class="col-lg-4 col-md-6 col-xs-12">
-                    <div class="p-1 bg-secondary-subtle">
-                        <h4 class="text-center">Beef</h4>
-                    <p class="text-start px-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-xs-12">
-                    <div class="p-1 bg-secondary-subtle">
-                        <h4 class="text-center">Sushi</h4>
-                    <p class="text-start px-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis enim, ab,
-                        omnis earum aperiam sapiente repudiandae nisi praesentium ratione provident asperiores eos quam
-                        modi exercitationem necessitatibus. Reiciendis nobis laboriosam sequi.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
+  <h1>Module 4 Solution Starter</h1>
 </body>
-
 </html>
